tests/golden/type_errors/nullable_narrowing_logical_unsupported.cd
fun takesNumber(value: number): number { return value; }
let maybe: number? = 1;
let ok = true;
if (maybe != nil && ok) {
  print takesNumber(maybe);
}
